--- a/src/app/shared/components/aside-bare/aside-bare.component.html
+++ b/src/app/shared/components/aside-bare/aside-bare.component.html
@@ -23,7 +23,7 @@
       <span>Gestions Des entités</span>
       <ul class="nav-items">
         <li class="nav-item">
-          <a routerLink="/members" routerLinkActive="active">
+          <a routerLink="members/list-members" routerLinkActive="active">
             <i class="bi bi-people"></i>
             <span class="nav-text">Liste Membres</span>
             <span class="tooltip">Liste Membres</span>
