--- a/src/app/shared/components/info-section/info-section.component.html
+++ b/src/app/shared/components/info-section/info-section.component.html
@@ -8,31 +8,53 @@
   </div>
   <div class="section-content" *ngIf="isOpen">
     <div class="info-grid">
-      <div class="info-pair" *ngFor="let item of dataAsArray">
-        <span class="info-key">{{ item.key | formatKey }}</span>
-        <span class="info-value"><!-- Specific Key Cases -->
-<a *ngIf="item.key === 'email'" [href]="'mailto:' + item.value">{{ item.value }}</a>
-<a *ngIf="item.key === 'numberPhone'" [href]="'tel:' + item.value">{{ item.value }}</a>
-<span *ngIf="item.key === 'birthday'">
-  {{ item.value | toDate | date:'d MMMM yyyy' }}
-</span>
+      <ng-container *ngFor="let item of dataAsArray">
 
-          <!-- Generic Type Cases -->
-<span *ngIf="item.value === true || item.value === false">
-  <i class="bi"
-     [ngClass]="item.value ? 'bi-check-circle-fill text-success' : 'bi-x-circle-fill text-danger'"></i>
-</span>
+        <!-- Special Case for PersonToCall Array -->
+        <ng-container *ngIf="item.key === 'personToCall' && isPersonToCallArray(item.value)">
+          <div class="info-pair full-width">
+            <span class="info-key">{{ item.key | formatKey }}</span>
+            <div class="contact-list">
+              <div class="contact-card" *ngFor="let contact of item.value">
+                <div class="contact-name">{{ contact.name }}</div>
+                <div class="contact-relation">{{ contact.relationship }}</div>
+                <a [href]="'tel:' + contact.numberPhone" class="contact-phone">
+                  <i class="bi bi-telephone-fill"></i> {{ contact.numberPhone }}
+                </a>
+              </div>
+            </div>
+          </div>
+        </ng-container>
 
-          <!-- Default Fallback -->
-<span *ngIf="item.key !== 'email'
-          && item.key !== 'numberPhone'
-          && item.key !== 'birthday'
-          && !(item.value === true || item.value === false)">
-  {{ item.value | json }}
-</span>
+        <!-- Default Case for other key-value pairs -->
+        <ng-container *ngIf="item.key !== 'personToCall'">
+          <div class="info-pair">
+            <span class="info-key">{{ item.key | formatKey }}</span>
+            <span class="info-value"><!-- Specific Key Cases -->
+              <a *ngIf="item.key === 'email'" [href]="'mailto:' + item.value">{{ item.value }}</a>
+              <a *ngIf="item.key === 'numberPhone'" [href]="'tel:' + item.value">{{ item.value }}</a>
+              <span *ngIf="item.key === 'birthday'">
+                {{ item.value | toDate | date:'d MMMM yyyy' }}
+              </span>
 
-        </span>
-      </div>
+              <!-- Generic Type Cases -->
+              <span *ngIf="item.value === true || item.value === false">
+                <i class="bi"
+                   [ngClass]="item.value ? 'bi-check-circle-fill text-success' : 'bi-x-circle-fill text-danger'"></i>
+              </span>
+
+              <!-- Default Fallback -->
+              <span *ngIf="item.key !== 'email'
+                        && item.key !== 'numberPhone'
+                        && item.key !== 'birthday'
+                        && !(item.value === true || item.value === false)">
+                {{ item.value }}
+              </span>
+            </span>
+          </div>
+        </ng-container>
+
+      </ng-container>
     </div>
   </div>
 </div>
