--- a/src/app/features/member/components/member-list/send-message-modal/send-message-modal.component.scss
+++ b/src/app/features/member/components/member-list/send-message-modal/send-message-modal.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../assets/scss/variables';
+@import 'variables';
 
 // --- Base --- //
 .modal-overlay {
@@ -7,7 +7,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba($dark, 0.6);
+  background-color: rgba($gray-900, 0.6);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,7 +20,7 @@
 }
 
 .modal-content {
-  background-color: white;
+  background-color: $white;
   border-radius: $radius-md;
   box-shadow: $shadow-lg;
   border: none;
@@ -34,12 +34,12 @@
   justify-content: space-between;
   align-items: center;
   padding: $space-4 $space-6;
-  border-bottom: 1px solid $color-border;
+  border-bottom: 1px solid $color-border-default;
 
   .modal-title {
     font-size: $font-size-h5;
     font-weight: 600;
-    color: $color-text;
+    color: $color-text-primary;
   }
 
   .btn-close {
@@ -53,7 +53,7 @@
     transition: background-color 0.2s ease;
 
     &:hover {
-      background-color: $light;
+      background-color: $gray-100;
     }
   }
 }
@@ -67,9 +67,9 @@
     align-items: center;
     gap: $space-2;
     padding: $space-3;
-    background-color: lighten($primary, 40%);
+    background-color: $primary-100;
     border-radius: $radius-sm;
-    color: darken($primary, 10%);
+    color: $primary-700;
     font-weight: 500;
     font-size: $font-size-small;
     margin-bottom: $space-4;
@@ -83,7 +83,7 @@
     .btn-template {
       background: transparent;
       border: none;
-      color: $primary;
+      color: $primary-500;
       font-size: $font-size-small;
       font-weight: 500;
       cursor: pointer;
@@ -98,15 +98,15 @@
 
     .form-control {
       border-radius: $radius-sm;
-      border: 1px solid $color-border;
+      border: 1px solid $color-border-default;
       padding: $space-3;
       font-size: $font-size-body;
       width: 100%;
       transition: border-color 0.2s, box-shadow 0.2s;
 
       &:focus {
-        border-color: $primary;
-        box-shadow: 0 0 0 3px lighten($primary, 40%);
+        border-color: $primary-500;
+        box-shadow: 0 0 0 3px $primary-100;
         outline: none;
       }
     }
@@ -127,7 +127,7 @@
   align-items: center;
   gap: $space-3;
   padding: $space-4 $space-6;
-  border-top: 1px solid $color-border;
+  border-top: 1px solid $color-border-default;
 }
 
 .btn {
@@ -143,27 +143,27 @@
   transition: all 0.2s ease;
 
   &.btn-primary {
-    background-color: $primary;
-    color: white;
+    background-color: $primary-500;
+    color: $white;
 
     &:hover:not(:disabled) {
-      background-color: $hover-color;
+      background-color: $primary-600;
     }
 
     &:disabled {
-      background-color: lighten($primary, 25%);
+      background-color: $primary-200;
       cursor: not-allowed;
       opacity: 0.7;
     }
   }
 
   &.btn-secondary {
-    background-color: white;
-    color: $color-text;
-    border-color: $color-border;
+    background-color: $white;
+    color: $color-text-primary;
+    border-color: $color-border-default;
 
     &:hover {
-      background-color: $light;
+      background-color: $gray-100;
     }
   }
 }
