--- a/src/app/features/member/components/member-list/table-body/table-body.component.scss
+++ b/src/app/features/member/components/member-list/table-body/table-body.component.scss
@@ -1,9 +1,9 @@
-@import "variables";
+@import 'variables';
 
 .table-container {
   overflow-x: auto;
   height: 100%;
-  background-color: white;
+  background-color: $white;
 }
 
 .table {
@@ -16,8 +16,8 @@
     z-index: 10;
 
     tr {
-      background-color: $light;
-      border-bottom: 1px solid $color-border;
+      background-color: $gray-100;
+      border-bottom: 1px solid $color-border-default;
 
       th {
         padding: $space-3 $space-4;
@@ -37,7 +37,7 @@
 
   tbody {
     tr {
-      border-bottom: 1px solid $color-border;
+      border-bottom: 1px solid $color-border-default;
       transition: background-color 0.2s ease;
       cursor: pointer;
 
@@ -49,7 +49,7 @@
         padding: $space-4;
         vertical-align: middle;
         font-size: $font-size-body;
-        color: $color-text;
+        color: $color-text-primary;
         white-space: nowrap;
 
         .badge {
@@ -69,17 +69,17 @@
 
   .btn-action {
     background: transparent;
-    border: 1px solid $color-border;
-    color: $color-text;
+    border: 1px solid $color-border-default;
+    color: $color-text-primary;
     padding: $space-2 $space-3;
     border-radius: $radius-sm;
     font-size: $font-size-small;
     transition: all 0.2s ease;
 
     &:hover {
-      background: $primary;
-      color: white;
-      border-color: $primary;
+      background: $primary-500;
+      color: $white;
+      border-color: $primary-500;
     }
   }
 
@@ -98,7 +98,7 @@
     transition: background-color 0.2s ease;
 
     &:hover {
-      background-color: $light;
+      background-color: $gray-100;
     }
 
     i {
@@ -112,8 +112,8 @@
     position: absolute;
     right: 100%; // Position to the left of the icon
     top: 0;
-    background-color: white;
-    border: 1px solid $color-border;
+    background-color: $white;
+    border: 1px solid $color-border-default;
     border-radius: $radius-sm;
     box-shadow: $shadow-md;
     min-width: 180px;
@@ -131,12 +131,12 @@
     display: block;
     padding: $space-2 $space-4;
     font-size: $font-size-small;
-    color: $color-text;
+    color: $color-text-primary;
     text-decoration: none;
     transition: background-color 0.2s ease;
 
     &:hover {
-      background-color: $light;
+      background-color: $gray-100;
     }
   }
 }
@@ -152,14 +152,14 @@
 
   .empty-state-icon {
     font-size: $icon-xl;
-    color: $primary;
+    color: $primary-500;
     margin-bottom: $space-6;
   }
 
   .empty-state-title {
     font-size: $font-size-h5;
     font-weight: 600;
-    color: $color-text;
+    color: $color-text-primary;
     margin-bottom: $space-2;
   }
 
@@ -171,8 +171,8 @@
   }
 
   .empty-state-button {
-    background-color: $primary;
-    color: white;
+    background-color: $primary-500;
+    color: $white;
     border: none;
     padding: $space-3 $space-6;
     font-size: $font-size-body;
@@ -182,7 +182,7 @@
     transition: background-color 0.2s ease;
 
     &:hover {
-      background-color: darken($primary, 10%);
+      background-color: $primary-600;
     }
   }
 }
