--- a/src/app/features/member/components/reregister-modal/reregister-modal.component.scss
+++ b/src/app/features/member/components/reregister-modal/reregister-modal.component.scss
@@ -1,4 +1,4 @@
-@import 'src/assets/scss/variables';
+@import 'variables';
 
 .modal-overlay {
   position: fixed;
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba($dark, 0.6);
+  background-color: rgba($gray-900, 0.6);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,7 +16,7 @@
 .modal-container {
   width: 90%;
   max-width: 500px;
-  background-color: white;
+  background-color: $white;
   border-radius: $radius-md;
   box-shadow: $shadow-lg;
   display: flex;
@@ -28,7 +28,7 @@
   justify-content: space-between;
   align-items: center;
   padding: $space-4 $space-6;
-  border-bottom: 1px solid $color-border;
+  border-bottom: 1px solid $color-border-default;
 
   .modal-title {
     font-size: $font-size-h5;
@@ -61,7 +61,7 @@
     width: 100%;
     padding: $space-2 $space-3;
     border-radius: $radius-sm;
-    border: 1px solid $color-border;
+    border: 1px solid $color-border-default;
     font-size: $font-size-body;
   }
 
@@ -78,7 +78,7 @@
   justify-content: flex-end;
   gap: $space-3;
   padding: $space-4 $space-6;
-  border-top: 1px solid $color-border;
+  border-top: 1px solid $color-border-default;
   background-color: #f9f9f9;
 }
 
@@ -92,8 +92,8 @@
 }
 
 .btn-primary {
-  background-color: $primary;
-  color: white;
+  background-color: $primary-500;
+  color: $white;
 
   &:disabled {
     opacity: 0.6;
@@ -102,7 +102,7 @@
 }
 
 .btn-secondary {
-  background-color: $light;
-  color: $color-text;
-  border-color: $color-border;
+  background-color: $gray-100;
+  color: $color-text-primary;
+  border-color: $color-border-default;
 }
