--- a/src/app/shared/components/confirm-delete-modal/confirm-delete-modal.component.scss
+++ b/src/app/shared/components/confirm-delete-modal/confirm-delete-modal.component.scss
@@ -1,4 +1,4 @@
-@import 'src/assets/scss/variables';
+@import 'variables';
 
 .modal-overlay {
   position: fixed;
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba($dark, 0.6);
+  background-color: rgba($gray-900, 0.6);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,7 +19,7 @@
 }
 
 .modal-content {
-  background-color: white;
+  background-color: $white;
   border-radius: $radius-md;
   box-shadow: $shadow-lg;
   text-align: center;
@@ -28,14 +28,14 @@
 
 .modal-icon {
   font-size: $icon-xl;
-  color: $danger;
+  color: $danger-500;
   margin-bottom: $space-4;
 }
 
 .modal-title {
   font-size: $font-size-h5;
   font-weight: 600;
-  color: $color-text;
+  color: $color-text-primary;
   margin-bottom: $space-3;
 }
 
@@ -65,20 +65,20 @@
 }
 
 .btn-danger {
-  background-color: $danger;
-  color: white;
+  background-color: $danger-500;
+  color: $white;
 
   &:hover {
-    background-color: darken($danger, 10%);
+    background-color: darken($danger-500, 10%);
   }
 }
 
 .btn-secondary {
-  background-color: $light;
-  color: $color-text;
-  border-color: $color-border;
+  background-color: $gray-100;
+  color: $color-text-primary;
+  border-color: $color-border-default;
 
   &:hover {
-    background-color: darken($light, 5%);
+    background-color: $gray-200;
   }
 }
