--- a/src/app/shared/components/modal/modal.component.scss
+++ b/src/app/shared/components/modal/modal.component.scss
@@ -23,7 +23,7 @@
 }
 
 .modal-panel {
-  background: white;
+  background: $white;
   border-radius: $radius-md;
   box-shadow: $shadow-lg;
   width: 100%;
@@ -39,7 +39,7 @@
   justify-content: space-between;
   align-items: center;
   padding: $space-4 $space-6;
-  border-bottom: 1px solid $color-border;
+  border-bottom: 1px solid $color-border-default;
   flex-shrink: 0;
 
   .modal-title {
@@ -58,7 +58,7 @@
     transition: background-color 0.2s ease;
 
     &:hover {
-      background-color: $light;
+      background-color: $gray-100;
     }
   }
 }
@@ -74,7 +74,7 @@
   justify-content: flex-end;
   align-items: center;
   padding: $space-4 $space-6;
-  border-top: 1px solid $color-border;
+  border-top: 1px solid $color-border-default;
   gap: $space-3;
   flex-shrink: 0;
 }
