--- a/src/app/shared/components/notification-popover/notification-popover.component.scss
+++ b/src/app/shared/components/notification-popover/notification-popover.component.scss
@@ -1,10 +1,10 @@
-@import 'src/assets/scss/variables';
+@import 'variables';
 
 .popover-container {
-  background-color: white;
+  background-color: $white;
   border-radius: $radius-md;
   box-shadow: $shadow-lg;
-  border: 1px solid $color-border;
+  border: 1px solid $color-border-default;
   width: 380px;
   max-height: 450px;
   display: flex;
@@ -16,7 +16,7 @@
   justify-content: space-between;
   align-items: center;
   padding: $space-3 $space-4;
-  border-bottom: 1px solid $color-border;
+  border-bottom: 1px solid $color-border-default;
   flex-shrink: 0;
 
   h6 {
@@ -28,7 +28,7 @@
   .btn-link {
     background: none;
     border: none;
-    color: $primary;
+    color: $primary-500;
     font-size: $font-size-small;
     cursor: pointer;
     padding: 0;
@@ -53,7 +53,7 @@
     display: flex;
     gap: $space-3;
     padding: $space-3 $space-4;
-    border-bottom: 1px solid $color-border;
+    border-bottom: 1px solid $color-border-default;
     transition: background-color 0.2s ease;
 
     &:last-child {
@@ -61,12 +61,12 @@
     }
 
     &:hover {
-      background-color: lighten($primary, 45%);
+      background-color: $primary-100;
     }
 
     &.is-unread {
-      background-color: lighten($primary, 48%);
-      border-left: 3px solid $primary;
+      background-color: $primary-100;
+      border-left: 3px solid $primary-500;
       padding-left: calc(#{$space-4} - 3px);
     }
   }
@@ -85,7 +85,7 @@
   .notification-text {
     margin: 0;
     font-size: $font-size-body;
-    color: $color-text;
+    color: $color-text-primary;
   }
 
   .notification-time {
@@ -117,11 +117,11 @@
 .popover-footer {
   padding: $space-3;
   text-align: center;
-  border-top: 1px solid $color-border;
+  border-top: 1px solid $color-border-default;
   flex-shrink: 0;
 
   a {
-    color: $primary;
+    color: $primary-500;
     text-decoration: none;
     font-weight: 500;
     font-size: $font-size-body;
