--- a/src/app/shared/pages/not-found/not-found.component.scss
+++ b/src/app/shared/pages/not-found/not-found.component.scss
@@ -1,11 +1,12 @@
-@import "variables"; // Import des variables de couleur
+@import 'variables';
+
 /* Styles pour le conteneur principal */
 .not-found-container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: $light; // Utilisation de la couleur claire pour le fond
+  background-color: $gray-100; // Utilisation de la couleur claire pour le fond
   font-family: 'Arial', sans-serif;
 }
 
@@ -14,7 +15,7 @@
   text-align: center;
   max-width: 600px;
   padding: 20px;
-  background-color: white; // Fond blanc pour le contenu
+  background-color: $white; // Fond blanc pour le contenu
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
@@ -23,20 +24,20 @@
 .not-found-content h1 {
   font-size: 6rem;
   margin: 0;
-  color: $danger; // Utilisation de la couleur de danger pour le titre
+  color: $danger-500; // Utilisation de la couleur de danger pour le titre
 }
 
 /* Styles pour le message */
 .not-found-message {
   font-size: 1.5rem;
   margin: 10px 0;
-  color: $dark; // Utilisation de la couleur sombre pour le texte
+  color: $gray-900; // Utilisation de la couleur sombre pour le texte
 }
 
 /* Styles pour la description */
 .not-found-description {
   font-size: 1rem;
-  color: $dark; // Utilisation de la couleur sombre pour le texte
+  color: $gray-900; // Utilisation de la couleur sombre pour le texte
   margin-bottom: 20px;
 }
 
@@ -45,13 +46,13 @@
   display: inline-block;
   padding: 10px 20px;
   font-size: 1rem;
-  color: white; // Texte en blanc pour contraster avec le fond
-  background-color: $primary; // Utilisation de la couleur principale pour le bouton
+  color: $white; // Texte en blanc pour contraster avec le fond
+  background-color: $primary-500; // Utilisation de la couleur principale pour le bouton
   border-radius: 5px;
   text-decoration: none;
   transition: background-color 0.3s ease;
 
   &:hover {
-    background-color: darken($primary, 10%); // Assombrir la couleur principale au survol
+    background-color: $primary-600; // Assombrir la couleur principale au survol
   }
 }
